# docs/Writerside/api-doc.yaml
@@ -1,198 +1,1 @@
-openapi: "3.0.1"
-info:
-  title: "OpenAPI definition"
-  version: "v0"
-servers:
-  - url: "http://localhost:8080/survey/api/v1"
-    description: "Generated server url"
-paths:
-  /users/{id}:
-    get:
-      tags:
-        - "user-controller"
-      operationId: "getUser"
-      parameters:
-        - name: "id"
-          in: "path"
-          required: true
-          schema:
-            type: "integer"
-            format: "int64"
-      responses:
-        200:
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/BaseResponse"
-    put:
-      tags:
-        - "user-controller"
-      operationId: "updateUser"
-      parameters:
-        - name: "id"
-          in: "path"
-          required: true
-          schema:
-            type: "integer"
-            format: "int64"
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/UserRequest"
-        required: true
-      responses:
-        200:
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/BaseResponse"
-    delete:
-      tags:
-        - "user-controller"
-      operationId: "deleteUser"
-      parameters:
-        - name: "id"
-          in: "path"
-          required: true
-          schema:
-            type: "integer"
-            format: "int64"
-      responses:
-        200:
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/BaseResponse"
-  /users/create:
-    post:
-      tags:
-        - "user-controller"
-      operationId: "createUser"
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/UserRequest"
-        required: true
-      responses:
-        200:
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/BaseResponse"
-components:
-  schemas:
-    UserRequest:
-      required:
-        - "email"
-        - "last_name"
-        - "name"
-        - "password"
-        - "phone_number"
-        - "username"
-      type: "object"
-      properties:
-        username:
-          type: "string"
-        name:
-          type: "string"
-        last_name:
-          type: "string"
-        email:
-          type: "string"
-        phone_number:
-          type: "integer"
-          format: "int32"
-        password:
-          maxLength: 2147483647
-          minLength: 8
-          type: "string"
-    BaseResponse:
-      type: "object"
-      properties:
-        data:
-          type: "object"
-        message:
-          type: "string"
-        success:
-          type: "boolean"
-        status:
-          type: "string"
-          enum:
-            - "100 CONTINUE"
-            - "101 SWITCHING_PROTOCOLS"
-            - "102 PROCESSING"
-            - "103 EARLY_HINTS"
-            - "103 CHECKPOINT"
-            - "200 OK"
-            - "201 CREATED"
-            - "202 ACCEPTED"
-            - "203 NON_AUTHORITATIVE_INFORMATION"
-            - "204 NO_CONTENT"
-            - "205 RESET_CONTENT"
-            - "206 PARTIAL_CONTENT"
-            - "207 MULTI_STATUS"
-            - "208 ALREADY_REPORTED"
-            - "226 IM_USED"
-            - "300 MULTIPLE_CHOICES"
-            - "301 MOVED_PERMANENTLY"
-            - "302 FOUND"
-            - "302 MOVED_TEMPORARILY"
-            - "303 SEE_OTHER"
-            - "304 NOT_MODIFIED"
-            - "305 USE_PROXY"
-            - "307 TEMPORARY_REDIRECT"
-            - "308 PERMANENT_REDIRECT"
-            - "400 BAD_REQUEST"
-            - "401 UNAUTHORIZED"
-            - "402 PAYMENT_REQUIRED"
-            - "403 FORBIDDEN"
-            - "404 NOT_FOUND"
-            - "405 METHOD_NOT_ALLOWED"
-            - "406 NOT_ACCEPTABLE"
-            - "407 PROXY_AUTHENTICATION_REQUIRED"
-            - "408 REQUEST_TIMEOUT"
-            - "409 CONFLICT"
-            - "410 GONE"
-            - "411 LENGTH_REQUIRED"
-            - "412 PRECONDITION_FAILED"
-            - "413 PAYLOAD_TOO_LARGE"
-            - "413 REQUEST_ENTITY_TOO_LARGE"
-            - "414 URI_TOO_LONG"
-            - "414 REQUEST_URI_TOO_LONG"
-            - "415 UNSUPPORTED_MEDIA_TYPE"
-            - "416 REQUESTED_RANGE_NOT_SATISFIABLE"
-            - "417 EXPECTATION_FAILED"
-            - "418 I_AM_A_TEAPOT"
-            - "419 INSUFFICIENT_SPACE_ON_RESOURCE"
-            - "420 METHOD_FAILURE"
-            - "421 DESTINATION_LOCKED"
-            - "422 UNPROCESSABLE_ENTITY"
-            - "423 LOCKED"
-            - "424 FAILED_DEPENDENCY"
-            - "425 TOO_EARLY"
-            - "426 UPGRADE_REQUIRED"
-            - "428 PRECONDITION_REQUIRED"
-            - "429 TOO_MANY_REQUESTS"
-            - "431 REQUEST_HEADER_FIELDS_TOO_LARGE"
-            - "451 UNAVAILABLE_FOR_LEGAL_REASONS"
-            - "500 INTERNAL_SERVER_ERROR"
-            - "501 NOT_IMPLEMENTED"
-            - "502 BAD_GATEWAY"
-            - "503 SERVICE_UNAVAILABLE"
-            - "504 GATEWAY_TIMEOUT"
-            - "505 HTTP_VERSION_NOT_SUPPORTED"
-            - "506 VARIANT_ALSO_NEGOTIATES"
-            - "507 INSUFFICIENT_STORAGE"
-            - "508 LOOP_DETECTED"
-            - "509 BANDWIDTH_LIMIT_EXCEEDED"
-            - "510 NOT_EXTENDED"
-            - "511 NETWORK_AUTHENTICATION_REQUIRED"
-        statusCode:
-          type: "integer"
-          format: "int32"
+{"openapi":"3.0.1","info":{"title":"OpenAPI definition","version":"v0"},"servers":[{"url":"http://localhost:8080/surveyEntity/api/v1","description":"Generated server url"}],"paths":{"/users/{id}":{"get":{"tags":["user-controller"],"operationId":"getUser","parameters":[{"name":"id","in":"path","required":true,"schema":{"type":"integer","format":"int64"}}],"responses":{"200":{"description":"OK","content":{"*/*":{"schema":{"$ref":"#/components/schemas/BaseResponse"}}}}}},"put":{"tags":["user-controller"],"operationId":"updateUser","parameters":[{"name":"id","in":"path","required":true,"schema":{"type":"integer","format":"int64"}}],"requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/User"}}},"required":true},"responses":{"200":{"description":"OK","content":{"*/*":{"schema":{"$ref":"#/components/schemas/BaseResponse"}}}}}},"delete":{"tags":["user-controller"],"operationId":"deleteUser","parameters":[{"name":"id","in":"path","required":true,"schema":{"type":"integer","format":"int64"}}],"responses":{"200":{"description":"OK","content":{"*/*":{"schema":{"$ref":"#/components/schemas/BaseResponse"}}}}}}},"/survey/{id}":{"get":{"tags":["survey-controller"],"operationId":"getSurvey","parameters":[{"name":"id","in":"path","required":true,"schema":{"type":"integer","format":"int64"}}],"responses":{"200":{"description":"OK","content":{"*/*":{"schema":{"$ref":"#/components/schemas/BaseResponse"}}}}}},"put":{"tags":["survey-controller"],"operationId":"update","parameters":[{"name":"id","in":"path","required":true,"schema":{"type":"integer","format":"int64"}}],"requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/Survey"}}},"required":true},"responses":{"200":{"description":"OK","content":{"*/*":{"schema":{"$ref":"#/components/schemas/BaseResponse"}}}}}},"delete":{"tags":["survey-controller"],"operationId":"delete","parameters":[{"name":"id","in":"path","required":true,"schema":{"type":"integer","format":"int64"}}],"responses":{"200":{"description":"OK","content":{"*/*":{"schema":{"$ref":"#/components/schemas/BaseResponse"}}}}}}},"/users/create":{"post":{"tags":["user-controller"],"operationId":"createUser","requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/User"}}},"required":true},"responses":{"200":{"description":"OK","content":{"*/*":{"schema":{"$ref":"#/components/schemas/BaseResponse"}}}}}}},"/survey":{"post":{"tags":["survey-controller"],"operationId":"create","requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/Survey"}}},"required":true},"responses":{"200":{"description":"OK","content":{"*/*":{"schema":{"$ref":"#/components/schemas/BaseResponse"}}}}}}},"/survey/":{"get":{"tags":["survey-controller"],"operationId":"healthCheck","responses":{"200":{"description":"OK","content":{"*/*":{"schema":{"type":"string"}}}}}}}},"components":{"schemas":{"Contact":{"type":"object","properties":{"email":{"type":"string"},"phone":{"type":"string"}}},"User":{"required":["contact","lastName","name","password","username"],"type":"object","properties":{"username":{"type":"string"},"name":{"type":"string"},"lastName":{"type":"string"},"password":{"maxLength":2147483647,"minLength":8,"type":"string"},"contact":{"$ref":"#/components/schemas/Contact"}}},"BaseResponse":{"type":"object","properties":{"data":{"type":"object"},"message":{"type":"string"},"success":{"type":"boolean"},"status":{"type":"string","enum":["100 CONTINUE","101 SWITCHING_PROTOCOLS","102 PROCESSING","103 EARLY_HINTS","103 CHECKPOINT","200 OK","201 CREATED","202 ACCEPTED","203 NON_AUTHORITATIVE_INFORMATION","204 NO_CONTENT","205 RESET_CONTENT","206 PARTIAL_CONTENT","207 MULTI_STATUS","208 ALREADY_REPORTED","226 IM_USED","300 MULTIPLE_CHOICES","301 MOVED_PERMANENTLY","302 FOUND","302 MOVED_TEMPORARILY","303 SEE_OTHER","304 NOT_MODIFIED","305 USE_PROXY","307 TEMPORARY_REDIRECT","308 PERMANENT_REDIRECT","400 BAD_REQUEST","401 UNAUTHORIZED","402 PAYMENT_REQUIRED","403 FORBIDDEN","404 NOT_FOUND","405 METHOD_NOT_ALLOWED","406 NOT_ACCEPTABLE","407 PROXY_AUTHENTICATION_REQUIRED","408 REQUEST_TIMEOUT","409 CONFLICT","410 GONE","411 LENGTH_REQUIRED","412 PRECONDITION_FAILED","413 PAYLOAD_TOO_LARGE","413 REQUEST_ENTITY_TOO_LARGE","414 URI_TOO_LONG","414 REQUEST_URI_TOO_LONG","415 UNSUPPORTED_MEDIA_TYPE","416 REQUESTED_RANGE_NOT_SATISFIABLE","417 EXPECTATION_FAILED","418 I_AM_A_TEAPOT","419 INSUFFICIENT_SPACE_ON_RESOURCE","420 METHOD_FAILURE","421 DESTINATION_LOCKED","422 UNPROCESSABLE_ENTITY","423 LOCKED","424 FAILED_DEPENDENCY","425 TOO_EARLY","426 UPGRADE_REQUIRED","428 PRECONDITION_REQUIRED","429 TOO_MANY_REQUESTS","431 REQUEST_HEADER_FIELDS_TOO_LARGE","451 UNAVAILABLE_FOR_LEGAL_REASONS","500 INTERNAL_SERVER_ERROR","501 NOT_IMPLEMENTED","502 BAD_GATEWAY","503 SERVICE_UNAVAILABLE","504 GATEWAY_TIMEOUT","505 HTTP_VERSION_NOT_SUPPORTED","506 VARIANT_ALSO_NEGOTIATES","507 INSUFFICIENT_STORAGE","508 LOOP_DETECTED","509 BANDWIDTH_LIMIT_EXCEEDED","510 NOT_EXTENDED","511 NETWORK_AUTHENTICATION_REQUIRED"]},"statusCode":{"type":"integer","format":"int32"}}},"Answer":{"type":"object","properties":{"title":{"type":"string"},"points":{"type":"integer","format":"int32"},"index":{"type":"string","enum":["A","B","C"]},"tag":{"$ref":"#/components/schemas/Tag"}}},"Question":{"type":"object","properties":{"title":{"type":"string"},"description":{"type":"string"},"answers":{"type":"array","items":{"$ref":"#/components/schemas/Answer"}}}},"Recommendation":{"type":"object","properties":{"title":{"type":"string"},"description":{"type":"string"},"tag":{"$ref":"#/components/schemas/Tag"}}},"Survey":{"type":"object","properties":{"title":{"type":"string"},"description":{"type":"string"},"userId":{"type":"integer","format":"int64"},"questions":{"type":"array","items":{"$ref":"#/components/schemas/Question"}},"recommendations":{"type":"array","items":{"$ref":"#/components/schemas/Recommendation"}}}},"Tag":{"type":"object","properties":{"name":{"type":"string"},"description":{"type":"string"}}}}}}
